# Lab6

untitled/: 5 instr.txt  CMakeLists.txt  a.cpp  a.h  main.cpp  merge sort.txt  quick sort.txt
